--- a/pom.xml
+++ b/pom.xml
@@ -443,17 +443,17 @@
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-core</artifactId>
-	    <version>2.9.9</version>
+	    <version>2.10.2</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
-	    <version>2.9.10.1</version>
+	    <version>2.10.2</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-annotations</artifactId>
-	    <version>2.9.9</version>
+	    <version>2.10.2</version>
 	</dependency>
 	<!-- jackson end -->
 	
@@ -487,13 +487,13 @@
 	<dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>fastjson</artifactId>
-        <version>1.2.31</version>
+        <version>1.2.62</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
         <version>1.9.4</version>
-    </dependency>
+    </dependency>-->
     <!-- fastjson end -->
     
     <!-- aip 百度文字识别 begin -->
